name:                wai-no-framework
version:             0.1.0.0
synopsis:            example WAI webapp
homepage:            https://github.com/gregwebs/wai-no-framework
license:             MIT
license-file:        LICENSE
author:              Greg Weber
maintainer:          greg@gregweber.info
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable wai-no-framework
  main-is:             Main.hs
  build-depends:       base >=4.7 && <4.8, http-types, wai, warp, bytestring
  default-language:    Haskell2010
  ghc-options: -Wall
